test/libsolidity/syntaxTests/visibility/interface/function_default.sol
interface I {
	function f();
}
// ----
// SyntaxError: (15-28): No visibility specified. Did you intend to add "public"?
// Warning: (15-28): Functions in interfaces should be declared external.
